2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl:      Fixed the tests to use both critcl and pure-Tcl
	* md4.test:     if the critcl version is available.
	
	* md4.tcl:      Made hashing cope with data that begins with a 
	* md4.test:     hyphen and made the '--' end-of-options marker
	* md4.man:      optional. Incremented version.
	* pkgIndex.tcl:  

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md4.tcl: Updated version number to sync with 1.6.1
	* md4.man: release.
	* pkgIndex.tcl:

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md4.tcl: Rel. engineering. Updated version number 
	* md4.man: of md4 to reflect its changes, to 1.0.2.
	* pkgIndex.tcl:

2004-02-18  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Streamlined the rotate-left function and fixed a rare
	  bug that occurs if the hash result produces a hypen as the first
	  character and we are using Trf's hex function.

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-05-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Remove frink warnings to quieten sak validate. 

2003-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md4.tcl: Changed the method MD4Final uses to produce the binary
	result to avoid problems on 64bit architectures.
	* md4.c:     Removed the c_src subdirectory and moved all files
	* md4.h:     into the md4 module directory. We want to keep the
	* md4c.tcl:  source tree as flat as possible.
	* md4.tcl, md4.man, pkgIndex.tcl: Hiked version to 1.0.1
	
2003-05-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*