@@ -13,6 +13,15 @@ an arbitrary quantity of data and generates a 128-bit message digest
 from the input. The MD4 algorithm is faster but potentially weaker than
 the related MD5 algorithm (3).
 
+[para]
+
+If you have [package critcl] and have built the [package tcllibc] package
+then the implementation of the hashing function will be performed by compiled
+code. Alternatively if [package cryptkit] is available this will be
+used. If no accelerator package can be found then the pure-tcl
+implementation is used. The programming interface remains the same in
+all cases.
+
 [section {COMMANDS}]
 
 [list_begin definitions]
@@ -63,13 +72,6 @@ bucket). You call [cmd MD4Init] to obtain a token and then call
 release any resources and obtain the hash value, you then call 
 [cmd MD4Final]. An equivalent set of functions gives you a keyed digest (HMAC).
 
-[para]
-
-If you have [package critcl] and have built the [package tcllibc] package
-then the implementation of the hashing function will be performed by compiled
-code - otherwise there is a pure-tcl equivalent. The programming
-interface remains the same, however.
-
 [list_begin definitions]
 
 [call [cmd "::md4::MD4Init"]]
@@ -108,12 +110,12 @@ These commands are identical to the MD4 equivalent commands.
 
 [example {
 % md4::md4 -hex "Tcl does MD4"
-858DA9B31F57648A032230447BD15F25
+858da9b31f57648a032230447bd15f25
 }]
 
 [example {
 % md4::hmac -hex -key Sekret "Tcl does MD4"
-C324088E5752872689CAEDF2A0464758
+c324088e5752872689caedf2a0464758
 }]
 
 [example {
@@ -123,7 +125,7 @@ C324088E5752872689CAEDF2A0464758
 % md4::MD4Update $tok "does "
 % md4::MD4Update $tok "MD4"
 % md4::Hex [md4::MD4Final $tok]
-858DA9B31F57648A032230447BD15F25
+858da9b31f57648a032230447bd15f25
 }]
 
 [section {REFERENCES}]
