@@ -1,6 +1,6 @@
 # md4.test - Copyright (C) 2003 Pat Thoyts <patthoyts@users.sourceforge.net>
 #
-# $Id: md4.test,v 1.10 2005/02/17 23:36:32 patthoyts Exp $
+# $Id: md4.test,v 1.11 2005/02/23 12:48:02 patthoyts Exp $
 
 # -------------------------------------------------------------------------
 # Initialize the test package
@@ -26,12 +26,30 @@ package require md4
 # Setup any constraints
 #
 
+array set preserve [array get ::md4::accel]
+
+proc have_accel {} {
+    foreach {e v} [array get ::md4::accel] { if {$v} {return 1} }
+    return 0
+}
+
+proc set_no_accel {} {
+    foreach e [array names ::md4::accel] { set ::md4::accel($e) 0 }
+}
+
+proc reset_accel {} {
+    array set ::md4::accel [array get ::preserve]
+}
+
 # -------------------------------------------------------------------------
 # Now the package specific tests....
 # -------------------------------------------------------------------------
 
-if {$::md4::usemd4c} {
+if {$::md4::accel(critcl)} {
     puts "- md4 [package provide md4] (using md4c)"
+}
+if {$::md4::accel(cryptkit)} {
+    puts "- md4 [package provide md4] (using cryptkit)"
 }
 puts "- md4 [package provide md4] (pure Tcl)"
 
@@ -39,35 +57,39 @@ puts "- md4 [package provide md4] (pure Tcl)"
 
 # The RFC 1320 test vectors
 #
-foreach {n msg hash} {
+set vectors {
     1 {}    {31D6CFE0D16AE931B73C59D7E0C089C0}
     2 {a}   {BDE52CB31DE33E46245E05FBDBD6FB24}
-    3 {abc} {A448017AAF21D8525FC10AE87AA6729D} 
+    3 {abc} {A448017AAF21D8525FC10AE87AA6729D}
     4 {message digest} {D9130A8164549FE818874806E1C7014B}
     5 {abcdefghijklmnopqrstuvwxyz} {D79E1C308AA5BBCDEEA8ED63DF412DA9}
     6 {ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789}
-    {043F8582F241DB351CE627E153E7F0E4}
+      {043F8582F241DB351CE627E153E7F0E4}
     7 {12345678901234567890123456789012345678901234567890123456789012345678901234567890}
-    {E33B4DDC9C38F2199C3E7B164FCC0536}
-} {
-    test md4-1.$n {md4 RFC test strings} {
-        ::md4::md4 -hex $msg
-    } $hash
+      {E33B4DDC9C38F2199C3E7B164FCC0536}
+}
 
-    if {$::md4::usemd4c} {
-        set ::md4::usemd4c 0
+foreach {n txt dgst} $vectors {
+    test md4-1.$n {md4 RFC test strings} {
+        list [catch {::md4::md4 -hex $txt} r] $r
+    } [list 0 $dgst]
+}
+
+if {[have_accel]} {
+    set_no_accel
+    foreach {n txt dgst} $vectors {
         test md4-tcl-1.$n {md4 RFC test strings (pure Tcl impl)} {
-            ::md4::md4 -hex $msg
-        } $hash
-        set ::md4::usemd4c 1
+            list [catch {::md4::md4 -hex $txt} r] $r
+        } [list 0 $dgst]
     }
+    reset_accel
 }
 
 # Block length checks
 #  these values are generated from the OpenSSL library implementation
 #  by md4_check.c
 #
-foreach {n hash} {
+set vectors {
     0 31D6CFE0D16AE931B73C59D7E0C089C0
     1 BDE52CB31DE33E46245E05FBDBD6FB24
     2 0DE97E6BACB92B24D7578FFB8D58F51E
@@ -218,22 +240,26 @@ foreach {n hash} {
     147 9B98A75EDED6B5AF8C449B75A74C30B3
     148 5F9F642231152DD8CD5CAA9B5FC59B5D
     149 84D82189C5458F8647D338FD62EF1667
-} {
+} 
+
+foreach {n hash} $vectors {
     test md4-2.$n "md4 block size checks: length $n" {
         list [catch {
             ::md4::md4 -hex [string repeat a $n]
         } msg] $msg
     } [list 0 $hash]
+}
 
-    if {$::md4::usemd4c} {
-        set ::md4::usemd4c 0
+if {[have_accel]} {
+    set_no_accel
+    foreach {n hash} $vectors {
         test md4-tcl-2.$n "md4 (pure tcl) block size checks: length $n" {
             list [catch {
                 ::md4::md4 -hex [string repeat a $n]
             } msg] $msg
         } [list 0 $hash]
-        set ::md4::usemd4c 1
     }
+    reset_accel
 }
 
 # -------------------------------------------------------------------------
