@@ -4,7 +4,7 @@
 #
 # This package has been tested with tcl 8.2.3 and above.
 #
-# $Id: pkgIndex.tcl,v 1.4 2004/05/26 04:24:29 andreas_kupries Exp $
+# $Id: pkgIndex.tcl,v 1.5 2005/02/23 12:48:02 patthoyts Exp $
 
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded md4 1.0.2 [list source [file join $dir md4.tcl]]
+package ifneeded md4 1.0.3 [list source [file join $dir md4.tcl]]
