@@ -1,3 +1,10 @@
+2005-02-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* pkgIndex.tcl: Incremented version to 1.0.3
+	* md4.tcl:      Rationalized the accelerator package handling.
+	* md4.test:     Added cryptkit as a potential accelerator.
+	* md4.man:      Added mention of the accelerators.
+
 2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* md4.tcl:      Fixed the tests to use both critcl and pure-Tcl
